lavf/segment: mark #EXT-X-ENDLIST in M3U8 only at the end of stream

Should fix immediate playback termination.

In particular, should fix trac ticket #2172.